# LearningCPP

./: .gitignore  CMakeLists.txt  LearningCPP.workspace  Makefile  README.md  autocommiter.py
.codelite/: LearningCPP-advik.tags  LearningCPP.session
.ctagsd/: file_list.txt  tags.db
AreaOfRoom/: CMakeLists.txt  main.cpp
Arrays/: CMakeLists.txt  main.cpp
Arthemetic/: CMakeLists.txt  main.cpp
BasicIO/: CMakeLists.txt  main.cpp
Challange1/: CMakeLists.txt  main.cpp
CompilerErrors/: CMakeLists.txt  main.cpp  makeitrain.h  makeitrain.hpp
ConditionalOperator/: CMakeLists.txt  main.cpp
ConditionalOperator2/: CMakeLists.txt  main.cpp
Constants/: CMakeLists.txt  main.cpp
Debug/: RangeBased-Assignment.ilk  SomeTextStuff.ilk
DoWhile-Loop/: CMakeLists.txt  DoWhile_Chooser  main.cpp
EqualityOperators/: CMakeLists.txt  main.cpp
EqualityOperatorsChar/: CMakeLists.txt  main.cpp
EqualityOperatorsString/: CMakeLists.txt  main.cpp
ExpressionsAndConversions/: CMakeLists.txt  main.cpp
ExpressionsAndStatements/: CMakeLists.txt  main.cpp
FirstProgram/: CMakeLists.txt  main.cpp
FirstWorkspace/: CMakeLists.txt  main.cpp  run.py
FirstWorkspace/.codelite/: FirstWorkspace.session
IfStatement/: CMakeLists.txt  main.cpp
IfStatement2/: CMakeLists.txt  IfStatement2.cpp
IncrementDecrement/: CMakeLists.txt  main.cpp
InfiniteLoops/: CMakeLists.txt  main.cpp
InputValidationUsingWhileLoop/: InputValidationUsingWhileLoop.mk  InputValidationUsingWhileLoop.project  InputValidationUsingWhileLoop.txt  compile_flags.txt  main.cpp
LogicalOperators/: CMakeLists.txt  main.cpp
Loops/: CMakeLists.txt  main.cpp
MDarrays/: CMakeLists.txt  main.cpp
NestedLoops/: CMakeLists.txt  main.cpp
NestedLoops2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
OperatorPrecedence/: CMakeLists.txt  OperatorPrecedence.cpp  OperatorPrecedence.h
PartialFunctions/: CMakeLists.txt  main.cpp
Qt++/: CMakeLists.txt  QtApp  main.cpp  menuBar.h
Qt++/.qt/: QtDeploySupport.cmake
RangeBased-Assignment/: RangeBased-Assignment.mk  RangeBased-Assignment.project  compile_flags.txt  main.cpp
RelationalOperators/: CMakeLists.txt  main.cpp
SFML-Translucent/: CMakeLists.txt  main.cpp
Section10/: CMakeLists.txt  main.cpp  main2.cpp
Section10-2/: CMakeLists.txt  main.cpp  main2.cpp
Section10-Challenge/: CMakeLists.txt  main.cpp
Section10-LetterPyramid/: CMakeLists.txt  main.cpp
Section8Challenge/: CMakeLists.txt  Section8Challenge.cpp
Section9Challenge/: CMakeLists.txt  main.cpp
SomeTextStuff/: SomeTextStuff.mk  SomeTextStuff.project  compile_flags.txt  main.cpp
SwitchCase/: CMakeLists.txt  main.cpp
The-Qt-Project/: CMakeLists.txt  io_util.h  main.cpp  uiLoader.h  window.h
The-Qt-Project/UI/: MainWindow.ui
USD-INR/: CMakeLists.txt  main.cpp
VectorChars/: CMakeLists.txt  main.cpp
Vectors/: CMakeLists.txt  main.cpp
VectorsAgain/: CMakeLists.txt  main.cpp
WhileLoop/: WhileLoop.mk  WhileLoop.project  compile_flags.txt  main.cpp
WhileLoop2/: WhileLoop2.mk  WhileLoop2.project  compile_flags.txt  main.cpp
WhileLoop3/: CMakeLists.txt  WhileLoop3.mk  WhileLoop3.project  compile_flags.txt  main.cpp
WhileLoopExercise/: CMakeLists.txt  main.cpp
consolevik/: CMakeLists.txt  Program  ProgramO  Test.cpp  colors.cpp  dumpfile.txt  dumpfile2.txt  effects.cpp  format.cpp
(+2 files in other folders)
